# flow-protocol

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-linux.sh  build-windows.bat  build_miner.bat  build_node.bat
ftc-full/: CMakeLists.txt
ftc-full/src/: main.cpp
ftc-keygen/: CMakeLists.txt
ftc-keygen/src/: main.cpp
ftc-miner-v2/: CMakeLists.txt
ftc-miner-v2/src/: main.cpp
ftc-miner-v2/src/autotune/: adaptive_tuner.cpp  adaptive_tuner.h  benchmark.cpp  benchmark.h  tuner.cpp  tuner.h
ftc-miner-v2/src/config/: config.cpp  config.h
ftc-miner-v2/src/dht/: bencode.cpp  dht.cpp  dht.h  node_id.cpp
ftc-miner-v2/src/mining/: cpu_miner.cpp  cpu_miner.h  gpu_miner.cpp  gpu_miner.h  gpu_monitor.cpp  gpu_monitor.h  keccak256.cpp  keccak256.h  work.cpp  work.h
ftc-miner-v2/src/net/: api_client.cpp  api_client.h  https_client.cpp  https_client.h  node_manager.cpp  node_manager.h  peer_manager.cpp  peer_manager.h  stratum_client.cpp  stratum_client.h
ftc-miner-v2/src/tui/: terminal.cpp  terminal.h  ui.cpp  ui.h  widgets.cpp  widgets.h
ftc-node/: CMakeLists.txt  ftc-node.service  install-linux.sh
ftc-node/assets/: create-icon.ps1  generate-ico.js  generate-icon.html  package.json
ftc-node/include/ftc/: version.h
ftc-node/installer/linux/: build.sh  install.sh  package.sh
ftc-node/installer/windows/: ftc-node.iss
ftc-node/src/: main.cpp  node.cpp  node.h  resources.rc
ftc-node/src/api/: handlers.cpp  handlers.h  server.cpp  server.h
ftc-node/src/chain/: block.cpp  block.h  chain.cpp  chain.h  consensus.cpp  consensus.h  genesis.h  mempool.cpp  mempool.h  snapshot.cpp  snapshot.h  transaction.cpp  transaction.h  utxo_set.cpp  utxo_set.h  validation.h
ftc-node/src/crypto/: base58.cpp  base58.h  bech32.cpp  bech32.h  keccak256.cpp  keccak256.h  secp256k1.cpp  secp256k1.h
ftc-node/src/dht/: bencode.h  dht.cpp  dht.h  node_id.h  routing_table.cpp  routing_table.h
ftc-node/src/p2p/: connection.cpp  connection.h  message_handler.cpp  message_handler.h  peer_manager.cpp  peer_manager.h  protocol.cpp  protocol.h  sync_manager.cpp  sync_manager.h
ftc-node/src/p2pool/: p2pool_net.cpp  p2pool_net.h  sharechain.cpp  sharechain.h
ftc-node/src/script/: interpreter.cpp  interpreter.h  script.cpp  script.h
ftc-node/src/seed/: seed_client.cpp  seed_client.h
ftc-node/src/storage/: block_store.cpp  block_store.h  database.cpp  database.h
ftc-node/src/stratum/: stratum_server.cpp  stratum_server.h
ftc-node/src/util/: config.cpp  config.h  filesystem_compat.h  hex.cpp  hex.h  logging.cpp  logging.h  time.cpp  time.h
ftc-node/test/: test_crypto.cpp  test_discovery.cpp
ftc-wallet/: CMakeLists.txt
ftc-wallet/src/: main.cpp
src/chain/: CMakeLists.txt  block_index.cpp  block_index.h  chain.cpp  chain.h  chainstate.cpp  chainstate.h  coins.cpp  coins.h  reorg.cpp  reorg.h  snapshot.cpp  snapshot.h
src/chain/storage/: block_store.cpp  block_store.h  flatfile.cpp  flatfile.h  index_db.h  (+3 more)
src/consensus/: CMakeLists.txt  amount.cpp  amount.h  block_verify.cpp  block_verify.h  merkle.cpp  merkle.h  params.cpp  params.h  pow.cpp  pow.h  script_check.cpp  script_check.h  sigcache.cpp  sigcache.h  subsidy.cpp  subsidy.h  time.cpp  time.h  tx_verify.cpp  tx_verify.h  validation.cpp  validation.h
src/core/: CMakeLists.txt  arena.cpp  arena.h  base58.cpp  base58.h  bech32.cpp  bech32.h  channel.cpp  channel.h  config.cpp  config.h  error.cpp  error.h  fs.cpp  fs.h  hex.cpp  hex.h  logging.cpp  logging.h  random.cpp  random.h  serialize.cpp  serialize.h  signal.cpp  signal.h  stream.cpp  stream.h  sync.cpp  sync.h  thread.cpp  thread.h  time.cpp  time.h  types.cpp  types.h  varint.cpp  varint.h
src/crypto/: CMakeLists.txt  aes.cpp  aes.h  bip32.cpp  bip32.h  bip39.cpp  bip39.h  bip39_wordlist.h  chacha20.cpp  chacha20.h  equihash.cpp  equihash.h  hash.cpp  hash.h  keccak.cpp  keccak.h  merkle.cpp  merkle.h  musig2.cpp  musig2.h  schnorr.cpp  schnorr.h  secp256k1.cpp  secp256k1.h  siphash.cpp  siphash.h
src/gpu/: CMakeLists.txt  gpu_equihash.cpp  gpu_equihash.h  gpu_miner.cpp  gpu_miner.h  kernel_source.h.in  opencl_context.cpp  opencl_context.h
src/mempool/: CMakeLists.txt  ancestor.cpp  ancestor.h  entry.cpp  entry.h  fee_estimator.cpp  fee_estimator.h  mempool.cpp  mempool.h  orphan.cpp  orphan.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/miner/: CMakeLists.txt  block_assembler.cpp  block_assembler.h  block_template.cpp  block_template.h  coinbase.cpp  coinbase.h  difficulty.cpp  difficulty.h  miner.cpp  miner.h  solver.cpp  solver.h  stratum.cpp  stratum.h  worker.cpp  worker.h
src/net/: CMakeLists.txt  dns_seeds.cpp  dns_seeds.h
src/node/: CMakeLists.txt  config.cpp  config.h  context.cpp  context.h  init.cpp  init.h  logging_init.cpp  logging_init.h  node.cpp  node.h  shutdown.cpp  shutdown.h
src/primitives/: CMakeLists.txt  address.cpp  address.h  amount.cpp  amount.h  block.cpp  block.h  block_header.cpp  block_header.h  fees.cpp  fees.h  outpoint.cpp  outpoint.h  transaction.cpp  transaction.h  txin.cpp  txin.h  txout.cpp  txout.h  witness.cpp  witness.h
src/rpc/: CMakeLists.txt  blockchain.cpp  blockchain.h  control.cpp  control.h  fees.cpp  fees.h  mempool_rpc.cpp  mempool_rpc.h  mining.cpp  mining.h  misc.cpp  misc.h  network.cpp  network.h  rawtransaction.cpp  rawtransaction.h  request.cpp  request.h  server.cpp  server.h  util.cpp  util.h  wallet_rpc.cpp  wallet_rpc.h
src/wallet/: CMakeLists.txt  addresses.cpp  addresses.h  backup.cpp  backup.h  balance.cpp  balance.h  coins.cpp  coins.h  create_tx.cpp  create_tx.h  encrypt.cpp  encrypt.h  fees.cpp  fees.h  hd.cpp  hd.h  history.cpp  history.h  keys.cpp  keys.h  notify.cpp  notify.h  sign_tx.cpp  sign_tx.h  spend.cpp  spend.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
test/: CMakeLists.txt  main.cpp  test_chain.cpp  test_consensus.cpp  test_core.cpp  test_crypto.cpp  test_framework.h  test_mempool.cpp  test_miner.cpp  test_net.cpp  test_node.cpp  test_primitives.cpp  test_rpc.cpp  test_wallet.cpp
tools/: CMakeLists.txt  mine_genesis.cpp  miner.cpp  miner_gpu.cpp  wallet.cpp
(+111 files in other folders)
